# Kroonika.NET

./: data_proc_pipeline.py  edge_list.csv  network_demo.py  pyproject.toml  test.gexf
python/: bert_test.py  kroonika_ner_test.py  miNER.py  open_text.py
tei/: kr01.04.2003.tei  kr01.06.2001.tei  kr01.10.2002.tei  kr02.02.2001.tei  kr02.03.2001.tei  kr02.04.2002.tei  kr02.07.2002.tei  kr02.10.2001.tei  kr03.09.2002.tei  kr03.12.2002.tei  kr04.02.2003.tei  kr04.03.2003.tei  kr04.05.2001.tei  kr04.06.2001.tei  kr04.09.2001.tei  kr04.12.2001.tei  kr05.01.2001.tei  kr05.02.2002.tei  kr05.03.2002.tei  kr05.11.2002.tei  kr06.04.2001.tei  kr06.08.2002.tei  kr06.11.2001.tei  kr07.01.2003.tei  kr07.05.2002.tei  kr07.08.2001.tei  kr08.04.2003.tei  kr08.10.2002.tei  kr08.12.2000.tei  kr09.01.2002.tei  kr09.02.2001.tei  kr09.03.2001.tei  kr09.04.2002.tei  kr09.07.2002.tei  kr09.10.2001.tei  kr10.09.2002.tei  kr10.12.2002.tei  kr11.02.2001.tei  kr11.02.2002.tei  kr11.03.2003.tei  (+74 more)
