[tool.poetry]
name = "kroonika-net"
version = "0.1.0"
description = "Nimede vahel seoste leidmine Kroonikat lugedes"
authors = ["Maria ja Rasmus"]
license = "MIT"
readme = "README.md"
packages = [{include = "kroonika"}]

[tool.poetry.dependencies]
python = "^3.9"
transformers = "3.3.1"
BeautifulSoup = "^3.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
